--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,32 +1,48 @@
+{% extends 'base.html' %}
 
-<!-- Table from https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_th -->
-<style>
-    table, th, td {
-      border: 1px solid black;
-    }
-    </style>
-    
-    <h1>United Shop</h1>
-    
-    <h5>Name: </h5>
-    <p>{{ name }}<p>
-    <h5>Class: </h5>
-    <p>{{ class }}<p>
-    
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Amount</th>
-            <th>Description</th>
-            <th>Price</th>
-        </tr>
+{% block content %}
+    <style>
+        table, th, td {
+        border: 1px solid black;
+        }
+        </style>
+        <h1>United Shop</h1>
 
-        <tr>
-            <td>{{ product }}</td>
-            <td>{{ amount }}</td>
-            <td>{{ description }}</td>
-            <td>{{ price }}</td>
-        </tr>
+        <h5>Name:</h5>
+        <p>{{ name }}</p>
+
+        <h5>Class:</h5>
+        <p>{{ class }}</p>
+
         
-        
-    </table>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Amount</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Date Added</th>
+            </tr>
+
+            <!-- {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %} -->
+
+            {% for product in products %}
+                <tr>
+                    <td>{{product.name}}</td>
+                    <td>{{product.amount}}</td>
+                    <td>{{product.description}}</td>
+                    <td>{{product.price}}</td>
+                    <td>{{product.date_added}}</td>
+                </tr>
+            {% endfor %}
+        </table>
+
+        <br />
+
+        <a href="{% url 'main:create_product' %}">
+            <button>
+                Add New Product
+            </button>
+        </a>
+
+{% endblock content %}
