--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -4,31 +4,72 @@
     <title>Register</title>
 {% endblock meta %}
 
-{% block content %}  
+{% block content %}  <!-- Section: Design Block -->
+<section class="">
+    <!-- Jumbotron -->
+    <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+        <div class="container">
+            <div class="row gx-lg-5 align-items-center">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <h1 class="my-5 display-3 fw-bold ls-tight" style="color: hsl(0, 0%, 0%)">
+                        Ayo bergabung <br />
+                        <span class="text-primary" style="color: hsl(218, 70%, 57%)">dengan kami</span>
+                    </h1>
+                    <p style="color: hsl(0, 5%, 15%)">
+                       pengiriman cepat, gratis ongkir, pengiriman cepat, gratis ongkir, hanya di United Shop.
+                    </p>
+                </div>
 
-<div class = "login">
-    
-    <h1>Register</h1>  
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <div class="card">
+                        <div class="card-body py-5 px-md-5">
+                            <form method="POST">
+                                {% csrf_token %}
+                            
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="id_username">Username</label>
+                                    <input type="text" id="id_username" name="username" class="form-control" required />
+                                </div>
+                            
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="id_email">Email address</label>
+                                    <input type="email" id="id_email" name="email" class="form-control" required />
+                                </div>
+                            
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="id_password1">Password</label>
+                                    <input type="password" id="id_password1" name="password1" class="form-control" required />
+                                </div>
+                            
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="id_password2">Confirm Password</label>
+                                    <input type="password" id="id_password2" name="password2" class="form-control" required />
+                                </div>
+                            
+                                <div class="text-center mb-4">
+                                    <button type="submit" class="btn btn-primary">Register</button>
+                                </div>
+                            </form>                            
+                            <div class="text-center mb-4">
+                                <a href="{% url 'main:login' %}" class="btn btn-link">Back to Login</a>
+                            </div>
+                            {% if messages %}  
+                                <ul class="mt-4">   
+                                    {% for message in messages %}  
+                                        <li class="alert alert-info">{{ message }}</li>  
+                                    {% endfor %}  
+                                </ul>   
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
-</div>  
 
 {% endblock content %}
