--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,72 +1,77 @@
-
-<!-- Table from https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_th -->
 {% extends 'base.html' %}
 
 {% block content %}
-<style>
-    table, th, td {
-      border: 1px solid black;
-    }
-    </style>
-    
-    <h1 align="center">United Shop</h1>
-    
-    <h5>Name: </h5>
-    <p>{{ name }}<p>
-    <h5>Class: </h5>
-    <p>{{ class }}<p>
-    
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Amount</th>
-            <th>Description</th>
-            <th>Price</th>
-        </tr>
+<h1 class="text-center mb-4">United Shop</h1>
 
-        {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-    
-        {% for product in products %}
-            <tr>
-                <td align="center">{{product.name}}</td>
-                <td align="center">{{product.amount}}
-                    <form method="post" action="{% url 'main:plus_amount' product.id %}">
-                        {% csrf_token %}
-                        <button class="btn btn-primary mx-1">+</button>
-                    </form>
-                    <form method="post" action="{% url 'main:minus_amount' product.id %}">
-                        {% csrf_token %}
-                        <button class="btn btn-primary mx-1">-</button>
-                    </form>
-                </td>
-                <td>{{product.description}}</td>
-                <td align="center">{{product.price}}</td>
-                <td class="d-flex align-items-center">
-                    <form method="post" action="{% url 'main:remove_product' product.id %}">
-                        {% csrf_token %}
-                        <button class="btn btn-primary mx-1">Delete</button>
-                    </form>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-    
-    <br />
-    
-    <h5>Sesi terakhir login: {{ last_login }}</h5>
-    
-    <a href="{% url 'main:create_product' %}">
-        <button>
-            Add New Product
-        </button>
-    </a>
+<div class="card mb-4">
+    <div class="card-header" style="background-color: hsl(0, 89%, 68%)">
+        <h5 class="card-title">Name:</h5>
+    </div>
+    <div class="card-body">
+        <p class="card-text">{{ name }}</p>
+    </div>
+    <div class="card-header" style="background-color: hsl(0, 89%, 68%)">
+        <h5 class="card-title">Class:</h5>
+    </div>
+    <div class="card-body">
+        <p class="card-text">{{ class }}</p>
+    </div>
+</div>
 
+<div class="card mb-4">
+    <div class="card-header">
+        <h5 class="card-title">Products</h5>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Amount</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in products %}
+                        <tr>
+                            <td style="background-color: hsl(0, 0%, 80%)">{{ product.name }}</td>
+                            <td>
+                                {{ product.amount }}
+                                <form method="post" action="{% url 'main:plus_amount' product.id %}">
+                                    {% csrf_token %}
+                                    <button class="btn btn-primary mx-1">+</button>
+                                </form>
+                                <form method="post" action="{% url 'main:minus_amount' product.id %}">
+                                    {% csrf_token %}
+                                    <button class="btn btn-primary mx-1">-</button>
+                                </form>
+                            </td>
+                            <td>{{ product.description }}</td>
+                            <td>{{ product.price }}</td>
+                            <td class="d-flex align-items-center">
+                                <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-success mr-2">Edit</a>
+                                <a href="{% url 'main:remove_product' product.pk %}" class="btn btn-danger">Delete</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
+<div class="card mb-4">
+    <div class="card-body">
+        <h5 class="card-title">Sesi terakhir login:</h5>
+        <p class="card-text">{{ last_login }}</p>
+    </div>
+</div>
 
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
-    
+<div class="d-flex justify-content-between mb-4">
+    <a href="{% url 'main:create_product' %}" class="btn btn-primary">Add New Product</a>
+    <a href="{% url 'main:logout' %}" class="btn btn-danger">Logout</a>
+</div>
 {% endblock content %}
